--- a/style.css
+++ b/style.css
@@ -64,9 +64,13 @@ width: 60px;
 height: 45px;
 left: 220px;
 bottom: 100px;
-touch-action: manipulation;
 
 }
+
+*{
+    touch-action: manipulation;
+ }
+
 
 .obstacle {
     background-image: url(flappybird-pipe.png) ;
